--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <li>Iñaki Peña — El guardián silencioso. Formado en La Masía, siempre listo para defender el arco con firmeza.</li>
 <img src="iñaki.jpg" width="300">
       <li>Pau Cubarsí — El nuevo Puyol. Liderazgo, contundencia y madurez en defensa a los 18 años.</li>
-<img src="pau.jpg" width="300">
+<img src="Pau.jpg" width="300">
       <li>Dro Fernández — La joya hispano-filipina de La Masía. Técnica brillante, visión de juego y un futuro que ya empieza a brillar.</li>
 <img src="dro.jpg" width="300">
     <section id="leyendas-olvidadas">
@@ -127,4 +127,5 @@
     <p>© 2025 - Página creada por Nico para el parcial. Visca Barça!</p>
   </footer>
 </body>
+
 </html>
