--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
       <img src="lamine.jpg" width="300">
       </div>
       <li>Raphinha — El resiliente brasileño. Técnica, garra y una historia que pasó del rechazo al liderazgo culé. Aún en proceso, pero ya deja huella.</li> 
-<img src="Raphinha.jpg" width="300">     
+<img src="raphinha.jpg" width="300">     
       <li>Pedri — El heredero del toque. Juventud con visión, entrega y elegancia en cada pase.</li> 
-<img src="Pedri.jpg" width="300">
+<img src="pedri.jpg" width="300">
       <li>Ansu Fati — El relámpago precoz que marcó historia con solo 16 años. Hoy sigue brillando en su camino de regreso.</li>
 <img src="fati.jpg" width="300">
       <li>Gavi — El gladiador del mediocampo. Trofeos, carácter y corazón culé desde la cantera.</li>
@@ -129,3 +129,4 @@
 </body>
 
 </html>
+
